RESOLVED FIXED198260
[LFC][IFC] Ignore collapsed runs when setting the width on the associated display boxes.
https://bugs.webkit.org/show_bug.cgi?id=198260
Summary [LFC][IFC] Ignore collapsed runs when setting the width on the associated dis...
alan
Reported 2019-05-26 12:13:00 PDT
They don't contribute to the width of the container.
Attachments
Patch (2.09 KB, patch)
2019-05-26 12:17 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-05-26 12:13:32 PDT
alan
Comment 2 2019-05-26 12:17:42 PDT
bradrini
Comment 3 2019-05-26 17:27:29 PDT
;) g'day zalan old friend, nice patch
alan
Comment 4 2019-05-27 06:48:44 PDT
(In reply to bradrini from comment #3) > ;) g'day zalan old friend, nice patch lol thanks mate!
WebKit Commit Bot
Comment 5 2019-05-27 07:15:24 PDT
Comment on attachment 370655 [details] Patch Clearing flags on attachment: 370655 Committed r245792: <https://trac.webkit.org/changeset/245792>
WebKit Commit Bot
Comment 6 2019-05-27 07:15:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.