[LFC][IFC] Ignore collapsed runs when setting the width on the associated display boxes. https://bugs.webkit.org/show_bug.cgi?id=198260 <rdar://problem/51145704>

Reviewed by Antti Koivisto.

Collapsed runs don't contribute to the logical width of their containers.

Covered by existing tests.

* layout/inlineformatting/InlineFormattingContextLineLayout.cpp:
(WebCore::Layout::InlineFormattingContext::LineLayout::closeLine const):


Canonical link: https://commits.webkit.org/212310@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245792 268f45cc-cd09-0410-ab3c-d52691b4dbfc